--- a/.github/workflows/azure-boards-check-linked-wi.yml
+++ b/.github/workflows/azure-boards-check-linked-wi.yml
@@ -7,7 +7,8 @@ on:
       - main
 
 jobs:
-   check-for-ab-work-item:
+  check-for-ab-work-item:
+    if: github.event.pull_request.draft == false
     name: check for linked work item
     runs-on: ubuntu-latest
     steps:
